# nmsdb

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: notes.MD
migrations/: env.py
migrations/versions/: 29590a3c67aa_initial_schema.py  45453a58023b_game_id_as_unique_field_for_product_and_.py  5755d6365b4d_products.py  ee9c6b0f6e07_set_substance_name_as_unique.py
nmsdb/: config.py  main.py
nmsdb/core/: exceptions.py  htmx.py  lifespan.py  navigation.py
nmsdb/core/api/: __init__.py
nmsdb/core/api/resources_and_items/: products.py  substances.py
nmsdb/core/constants/: nms.py  redis.py
nmsdb/core/controllers/: base.py  product.py  substance.py
nmsdb/core/crud/: __init__.py  base.py  product.py  substance.py
nmsdb/core/dependencies/: database.py  redis.py
nmsdb/core/models/: htmx.py  navigation.py  params.py  product.py  substance.py
nmsdb/core/models/ui/: dropdown.py
nmsdb/core/static/css/: nmsdb.css  styles.bundle.css  styles.css
nmsdb/core/static/js/: sidebar-state.js
nmsdb/core/templates/_layouts/: _base.html  footer.html  header.html  sidebar.html
nmsdb/core/templates/fragments/generic/: pagination.html
nmsdb/core/templates/fragments/resources_and_items/: products.html  substance_relationships_menu.html  substances.html
nmsdb/core/templates/macros/: dropdown.html
nmsdb/core/templates/pages/: landing_page.html
nmsdb/core/templates/pages/resources_and_items/: product.html  products.html  substance.html  substances.html
nmsdb/core/ui/: __init__.py
nmsdb/core/ui/resources_and_items/: products.py  substances.py
(+7 files in other folders)
