[tool.poetry]
name = "nmsdb"
version = "0.1.0"
description = ""
authors = ["BSpendlove <8687668+BSpendlove@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"
alembic = "^1.15.2"
sqlmodel = "^0.0.24"
uvicorn = "^0.34.0"
jinja2 = "^3.1.6"
asyncmy = "^0.2.10"
redis = "^5.2.1"
structlog = "^25.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
